compiler/testData/diagnostics/tests/inner/noTypeArgumentsOnInner.diag.txt
/test1.kt:11:29: error: one type argument expected. Use 'B<*>' if you don't want to pass type arguments
    fun test(x: Any) = x is B
                            ^
/test2.kt:19:29: error: one type argument expected. Use 'B<*>' if you don't want to pass type arguments
    fun test(x: Any) = x is B
                            ^
/test3.kt:29:37: error: one type argument expected. Use 'D<*>' if you don't want to pass type arguments
            fun test(x: Any) = x is D
                                    ^
/test4.kt:41:37: error: 2 type arguments expected. Use 'D<*, *>' if you don't want to pass type arguments
            fun test(x: Any) = x is D
                                    ^
/test5.kt:55:29: error: 2 type arguments expected. Use 'D<*, *>' if you don't want to pass type arguments
    fun test(x: Any) = x is B.C.D
                            ^^^^^
/test6.kt:67:29: error: 3 type arguments expected. Use 'D<*, *, *>' if you don't want to pass type arguments
    fun test(x: Any) = x is B.C.D
                            ^^^^^
/test7.kt:79:29: error: one type argument expected. Use 'D<*>' if you don't want to pass type arguments
    fun test(x: Any) = x is B.C.D
                            ^^^^^
/test8.kt:88:33: error: 6 type arguments expected. Use 'C<*, *, *, *, *, *>' if you don't want to pass type arguments
        fun test(x: Any) = x is C
                                ^

